_deploy/pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: simon
spec:
  containers:
    - name: api
      image: ghcr.io/go-faster/simon:latest
      ports:
        - containerPort: 8090
          protocol: TCP
          name: metrics
      resources:
        requests:
          memory: "64Mi"
          cpu: "50m"
        limits:
          memory: "128Mi"
          cpu: "250m"
