_deploy/server.deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
        app.kubernetes.io/part-of: simon
        app.kubernetes.io/component: server
    spec:
      containers:
      - name: server
        image: ghcr.io/go-faster/simon:latest
        args:
          - "server"
        ports:
          - containerPort: 8090
            protocol: TCP
            name: metrics
          - containerPort: 8080
            protocol: TCP
            name: http
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "250m"
