_deploy/client.servicemonitor.yml
---
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - port: 8090
      targetPort: metrics
      name: metrics
      protocol: TCP
