_deploy/server.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: server
  labels:
    app: server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 80
      targetPort: http
      name: http
      protocol: TCP
    - port: 8090
      targetPort: metrics
      name: metrics
      protocol: TCP
