_deploy/default.cnp.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default
  labels:
    app.kubernetes.io/part-of: simon
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/part-of: simon
  ingress:
    - {}
  egress:
    - {}
