_deploy/server.cnp.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: server.from.client
  labels:
    app: server
spec:
  endpointSelector:
    matchLabels:
      app: server
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: client
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
          rules:
            http:
              - method: "GET"
                path: "/status"
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: server.to.tracing
  labels:
    app: server
spec:
  endpointSelector:
    matchLabels:
      app: server
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchName: "tempo-distributor.monitoring.svc.cluster.local"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: tempo
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
