_deploy/server.ingress.yml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: server.ingress
spec:
  endpointSelector:
    matchLabels:
      app: server
  ingress:
    - fromEndpoints:
        - matchLabels:
            app: client
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: tempo
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "4317"
              protocol: TCP
